// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Om deg og avdød Snapshot med sivilstatus samboer 1`] = `
<div>
  <div
    class="sc-guDLRT gSrTwn"
  >
    <h1
      class="center navds-heading navds-heading--medium"
    >
      omDegOgAvdoed.tittel
    </h1>
  </div>
  <form>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <label
        class="navds-label"
      >
        omDegOgAvdoed.avdoed.hvem
      </label>
      <div
        class="navds-grid"
      >
        <div
          class="navds-grid__cell navds-grid__cell--xs-12 navds-grid__cell--md-6"
        >
          <div>
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="avdoed.fornavn"
              >
                omDegOgAvdoed.avdoed.fornavn
              </label>
              <input
                aria-invalid="false"
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="avdoed.fornavn"
                required=""
                type="text"
                value=""
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-aksel-id-15"
              />
            </div>
          </div>
        </div>
        <div
          class="navds-grid__cell navds-grid__cell--xs-12 navds-grid__cell--md-6"
        >
          <div>
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="avdoed.etternavn"
              >
                omDegOgAvdoed.avdoed.etternavn
              </label>
              <input
                aria-invalid="false"
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="avdoed.etternavn"
                required=""
                type="text"
                value=""
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-aksel-id-16"
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <label
        class="navds-label"
      >
        omDegOgAvdoed.avdoed.datoForDoedsfallet
      </label>
      <section
        class="sc-eDLJxc kobyUl"
      >
        <label
          class="navds-label"
          for="avdoed.datoForDoedsfallet"
        >
          omDegOgAvdoed.avdoed.dato felles.datoformat
        </label>
        <div
          class="sc-hLQRIN djofpo"
        >
          <div>
            <div
              class="ds-datepicker"
            >
              <div
                class="ds-datepicker"
              >
                <div
                  class="ds-datepicker__input navds-form-field navds-form-field--medium"
                >
                  <label
                    class="navds-text-field__label sr-only navds-label"
                    for="avdoed.datoForDoedsfallet"
                  >
                    abc
                  </label>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    autocorrect="off"
                    class="navds-text-field__input navds-body-short navds-body-medium"
                    id="avdoed.datoForDoedsfallet"
                    inputmode="text"
                    maxlength="10"
                    name="avdoed.datoForDoedsfallet"
                    placeholder="felles.datoEksempel"
                    type="text"
                    value=""
                  />
                  <div
                    aria-live="polite"
                    aria-relevant="additions removals"
                    id="textField-error-456"
                  />
                </div>
                <button
                  aria-expanded="false"
                  class="ds-datepicker__kalenderknapp"
                  type="button"
                >
                  <span
                    class="sr-only"
                  >
                    Kalender
                  </span>
                  <span
                    aria-hidden="true"
                    class="ds-datepicker__kalenderknapp__icon"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      role="presentation"
                      style="pointer-events: none;"
                      viewBox="0 0 18 18"
                      width="16"
                    >
                      <title>
                        Kalenderikon
                      </title>
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke="#0067C5"
                      >
                        <path
                          d="M4 2.667H1.333v14h15.334v-14H14"
                        />
                        <path
                          d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        
      </section>
    </fieldset>
    <div
      id="forholdTilAvdoede.relasjon"
    >
      <div
        class="sc-guDLRT gSrTwn"
      >
        <fieldset
          aria-invalid="false"
          class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            omDegOgAvdoed.forholdTilAvdoede.relasjon
          </legend>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-17"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.gift"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-17"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    avdoede.relasjon.gift
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-18"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.separert"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-18"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    avdoede.relasjon.separert
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-19"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.samboer"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-19"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    avdoede.relasjon.samboer
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-20"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.skilt"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-20"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    avdoede.relasjon.skilt
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-21"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.tidligereSamboer"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-21"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    avdoede.relasjon.tidligereSamboer
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-aksel-id-22"
          />
        </fieldset>
      </div>
    </div>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        class="sc-guDLRT gSrTwn"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          omDegOgAvdoed.nySivilstatus.sivilstatus
        </h1>
        <p
          class="navds-body-long"
        >
          omDegOgAvdoed.nySivilstatus.beskrivelse
        </p>
      </div>
      <div
        id="nySivilstatus.sivilstatus"
      >
        <div
          class="sc-guDLRT gSrTwn"
        >
          <fieldset
            aria-invalid="false"
            class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            />
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-24"
                  name="nySivilstatus.sivilstatus"
                  type="radio"
                  value="nySivilstatus.enslig"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-24"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      nySivilstatus.enslig
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-25"
                  name="nySivilstatus.sivilstatus"
                  type="radio"
                  value="nySivilstatus.ekteskap"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-25"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      nySivilstatus.ekteskap
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-26"
                  name="nySivilstatus.sivilstatus"
                  type="radio"
                  value="nySivilstatus.samboerskap"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-26"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      nySivilstatus.samboerskap
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-aksel-id-27"
            />
          </fieldset>
        </div>
      </div>
      <div
        class="navds-panel navds-panel--border"
      >
        <div
          class="sc-guDLRT gSrTwn"
        >
          <h1
            class="navds-heading navds-heading--small"
          >
            omDegOgAvdoed.nySivilstatus.samboerskap.samboer.tittel
          </h1>
        </div>
        <div
          class="navds-grid"
        >
          <div
            class="navds-grid__cell navds-grid__cell--xs-12 navds-grid__cell--md-6"
          >
            <div
              class="kol-50"
            >
              <div
                class="navds-form-field navds-form-field--medium"
              >
                <label
                  class="navds-form-field__label navds-label"
                  for="nySivilstatus.samboerskap.samboer.fornavn"
                >
                  omDegOgAvdoed.nySivilstatus.samboerskap.samboer.fornavn
                </label>
                <input
                  aria-invalid="false"
                  class="navds-text-field__input navds-body-short navds-body-medium"
                  id="nySivilstatus.samboerskap.samboer.fornavn"
                  required=""
                  type="text"
                  value=""
                />
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-form-field__error"
                  id="textField-error-aksel-id-29"
                />
              </div>
            </div>
          </div>
          <div
            class="navds-grid__cell navds-grid__cell--xs-12 navds-grid__cell--md-6"
          >
            <div
              class="kol-50"
            >
              <div
                class="navds-form-field navds-form-field--medium"
              >
                <label
                  class="navds-form-field__label navds-label"
                  for="nySivilstatus.samboerskap.samboer.etternavn"
                >
                  omDegOgAvdoed.nySivilstatus.samboerskap.samboer.etternavn
                </label>
                <input
                  aria-invalid="false"
                  class="navds-text-field__input navds-body-short navds-body-medium"
                  id="nySivilstatus.samboerskap.samboer.etternavn"
                  required=""
                  type="text"
                  value=""
                />
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-form-field__error"
                  id="textField-error-aksel-id-30"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="navds-form-field navds-form-field--medium"
        >
          <label
            class="navds-form-field__label navds-label"
            for="nySivilstatus.samboerskap.samboer.foedselsnummer"
          >
            felles.fnr
          </label>
          <input
            aria-invalid="false"
            class="navds-text-field__input navds-body-short navds-body-medium"
            id="nySivilstatus.samboerskap.samboer.foedselsnummer"
            placeholder="felles.fnrPlaceholder"
            required=""
            size="25"
            type="tel"
            value=""
          />
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-form-field__error"
            id="textField-error-aksel-id-31"
          />
        </div>
        <div
          id="nySivilstatus.samboerskap.hattBarnEllerVaertGift"
        >
          <fieldset
            aria-invalid="false"
            class="sc-dmyDGi lnMqdf navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              omDegOgAvdoed.nySivilstatus.samboerskap.hattBarnEllerVaertGift
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-32"
                  name="nySivilstatus.samboerskap.hattBarnEllerVaertGift"
                  type="radio"
                  value="radiobuttons.ja"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-32"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.ja
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-33"
                  name="nySivilstatus.samboerskap.hattBarnEllerVaertGift"
                  type="radio"
                  value="radiobuttons.nei"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-33"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.nei
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-aksel-id-34"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        class="sc-iBdmCd dgiWjO undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-iBdmCd sc-fsYeqs dgiWjO ildosw"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Om deg og avdød Snapshot uten samboerskjema 1`] = `
<div>
  <div
    class="sc-guDLRT gSrTwn"
  >
    <h1
      class="center navds-heading navds-heading--medium"
    >
      omDegOgAvdoed.tittel
    </h1>
  </div>
  <form>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <label
        class="navds-label"
      >
        omDegOgAvdoed.avdoed.hvem
      </label>
      <div
        class="navds-grid"
      >
        <div
          class="navds-grid__cell navds-grid__cell--xs-12 navds-grid__cell--md-6"
        >
          <div>
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="avdoed.fornavn"
              >
                omDegOgAvdoed.avdoed.fornavn
              </label>
              <input
                aria-invalid="false"
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="avdoed.fornavn"
                required=""
                type="text"
                value=""
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-aksel-id-1"
              />
            </div>
          </div>
        </div>
        <div
          class="navds-grid__cell navds-grid__cell--xs-12 navds-grid__cell--md-6"
        >
          <div>
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="avdoed.etternavn"
              >
                omDegOgAvdoed.avdoed.etternavn
              </label>
              <input
                aria-invalid="false"
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="avdoed.etternavn"
                required=""
                type="text"
                value=""
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-aksel-id-2"
              />
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <label
        class="navds-label"
      >
        omDegOgAvdoed.avdoed.datoForDoedsfallet
      </label>
      <section
        class="sc-eDLJxc kobyUl"
      >
        <label
          class="navds-label"
          for="avdoed.datoForDoedsfallet"
        >
          omDegOgAvdoed.avdoed.dato felles.datoformat
        </label>
        <div
          class="sc-hLQRIN djofpo"
        >
          <div>
            <div
              class="ds-datepicker"
            >
              <div
                class="ds-datepicker"
              >
                <div
                  class="ds-datepicker__input navds-form-field navds-form-field--medium"
                >
                  <label
                    class="navds-text-field__label sr-only navds-label"
                    for="avdoed.datoForDoedsfallet"
                  >
                    abc
                  </label>
                  <input
                    aria-invalid="false"
                    autocomplete="off"
                    autocorrect="off"
                    class="navds-text-field__input navds-body-short navds-body-medium"
                    id="avdoed.datoForDoedsfallet"
                    inputmode="text"
                    maxlength="10"
                    name="avdoed.datoForDoedsfallet"
                    placeholder="felles.datoEksempel"
                    type="text"
                    value=""
                  />
                  <div
                    aria-live="polite"
                    aria-relevant="additions removals"
                    id="textField-error-456"
                  />
                </div>
                <button
                  aria-expanded="false"
                  class="ds-datepicker__kalenderknapp"
                  type="button"
                >
                  <span
                    class="sr-only"
                  >
                    Kalender
                  </span>
                  <span
                    aria-hidden="true"
                    class="ds-datepicker__kalenderknapp__icon"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      role="presentation"
                      style="pointer-events: none;"
                      viewBox="0 0 18 18"
                      width="16"
                    >
                      <title>
                        Kalenderikon
                      </title>
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke="#0067C5"
                      >
                        <path
                          d="M4 2.667H1.333v14h15.334v-14H14"
                        />
                        <path
                          d="M4 1.333h2V4H4zm8 0h2V4h-2zM6 2h6M1.333 6h15.334"
                        />
                      </g>
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        
      </section>
    </fieldset>
    <div
      id="forholdTilAvdoede.relasjon"
    >
      <div
        class="sc-guDLRT gSrTwn"
      >
        <fieldset
          aria-invalid="false"
          class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            omDegOgAvdoed.forholdTilAvdoede.relasjon
          </legend>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-3"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.gift"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-3"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    avdoede.relasjon.gift
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-4"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.separert"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-4"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    avdoede.relasjon.separert
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-5"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.samboer"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-5"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    avdoede.relasjon.samboer
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-6"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.skilt"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-6"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    avdoede.relasjon.skilt
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-aksel-id-7"
                name="forholdTilAvdoede.relasjon"
                type="radio"
                value="avdoede.relasjon.tidligereSamboer"
              />
              <label
                class="navds-radio__label"
                for="radio-aksel-id-7"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    avdoede.relasjon.tidligereSamboer
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-aksel-id-8"
          />
        </fieldset>
      </div>
    </div>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        class="sc-guDLRT gSrTwn"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          omDegOgAvdoed.nySivilstatus.sivilstatus
        </h1>
        <p
          class="navds-body-long"
        >
          omDegOgAvdoed.nySivilstatus.beskrivelse
        </p>
      </div>
      <div
        id="nySivilstatus.sivilstatus"
      >
        <div
          class="sc-guDLRT gSrTwn"
        >
          <fieldset
            aria-invalid="false"
            class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            />
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-10"
                  name="nySivilstatus.sivilstatus"
                  type="radio"
                  value="nySivilstatus.enslig"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-10"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      nySivilstatus.enslig
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-11"
                  name="nySivilstatus.sivilstatus"
                  type="radio"
                  value="nySivilstatus.ekteskap"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-11"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      nySivilstatus.ekteskap
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-aksel-id-12"
                  name="nySivilstatus.sivilstatus"
                  type="radio"
                  value="nySivilstatus.samboerskap"
                />
                <label
                  class="navds-radio__label"
                  for="radio-aksel-id-12"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      nySivilstatus.samboerskap
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-aksel-id-13"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beySbM kuevld"
    >
      <div
        class="sc-iBdmCd dgiWjO undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-iBdmCd sc-fsYeqs dgiWjO ildosw"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
  </form>
</div>
`;
